[Update] Add some flake8 rules to be ignored
This list is basically based on the existing codes.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,17 @@ max-line-length = 88
 ;E203 whitespace before ':'
 ;F401 imported but unused
 ;W292 no new line at the end of file
-ignore = W503, E203, F401, W292
+;E731 do not assign a lambda expression, use a def
+;E402 module level import not at top of file
+;E741 ambiguous variable name 'O'
+;E305 expected 2 blank lines after class or function definition
+;E226 missing whitespace around arithmetic operator
+;W391 blank line at end of file
+;E302 expected 2 blank lines, found 1
+;E261 at least two spaces before inline comment
+;E262 inline comment should start with '# '
+;E265
+ignore = W503, E203, F401, W292, E731, E402, E741, E305, E226, W391, E302, E261, E262, E265
 
 [isort]
 line_length = 88
